--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 # Site settings
 title: Christian Eiselt
 github_username:  christianeiselt
-theme: jekyll-theme-hacker
+theme: jekyll-theme-architect
