--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@
 title: Christian Eiselt
 github_username:  christianeiselt
 avatar: https://avatars.githubusercontent.com/u/21975779?s=400&u=60da64900bd65d1875d7be142599cc03391c0843&v=4
-theme: jekyll-theme-architect
+theme: jekyll-theme-modernist
 plugins:
 - jemoji
