--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # Site settings
 title: Christian Eiselt
-github_username:  christianeiselt
-avatar: https://avatars.githubusercontent.com/u/21975779?s=400&u=60da64900bd65d1875d7be142599cc03391c0843&v=4
+avatar: https://avatars.githubusercontent.com/christianeiselt
 theme: jekyll-theme-modernist
 plugins:
 - jemoji
