--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@
 title: Christian Eiselt
 avatar: https://avatars.githubusercontent.com/christianeiselt
 theme: jekyll-theme-modernist
+include: ['_pages']
 plugins:
 - jemoji
